// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SubHeader when admin does not exist 1`] = `
<header>
  <NavLink
    activeClassName="is-active"
    to="/dashboard"
  >
    Dashboard
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/pantry"
  >
    Pantry
  </NavLink>
</header>
`;

exports[`should render SubHeader when admin exists 1`] = `
<header>
  <NavLink
    activeClassName="is-active"
    to="/dashboard"
  >
    Dashboard
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/pantry"
  >
    Pantry
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/ingredients"
  >
    Ingredients
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/dishes"
  >
    Dishes
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/add-dish"
  >
    Add Dish
  </NavLink>
</header>
`;
